<resources>
    <string name="app_name">APU Timetable</string>
    <string name="copyright_text">© 2017 Chee Kah Shing</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="settings_title">Settings</string>
    <string name="about_title">About</string>
    <string name="no_class_text">No Class Found</string>
    <string name="github_link">https://github.com/shingz96/APU_Timetable</string>
    <string name="author_text">Author</string>
    <string name="author_name">Chee Kah Shing</string>
    <string name="author_info">Selangor, Malaysia</string>
    <string name="version_text">Version</string>
    <string name="fork_text">Fork on Github</string>
    <string name="changelog_text">Changelog</string>
    <string name="changelog_html">changelog.html</string>
    <string name="license_text">License</string>
    <string name="license_apache2_text">Apache License v2.0</string>
    <string name="license_dialog_style" translatable="false">
        body {
        background-color: #{bg-color};
        color: #{text-color};
        font-family: sans-serif;
        overflow-wrap: break-word;
        }
        pre {
        background-color: #{license-bg-color};
        padding: 1em;
        white-space: pre-wrap;
        }
    </string>
    <string name="license_apache2_summary">
        "\nCopyright %1$s %2$s\n"

        "\nLicensed under the Apache License, Version 2.0 (the \"License\");"
        "you may not use this file except in compliance with the License."
        "You may obtain a copy of the License at\n"

        "\n<![CDATA[ <a href="http://www.apache.org/licenses/LICENSE-2.0">http://www.apache.org/licenses/LICENSE-2.0</a>]]>\n"

        "\nUnless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an \"AS IS\" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and limitations under the License."
    </string>
    <string name="invalid_intake_code_warning">"Are you sure this is a right intake code?"</string>
    <string name="type_filter_summary">Choose the type of class to show</string>
    <string name="type_filter_title">Type Filter (Only for Today Class)</string>
    <string name="type_filter_list_key">type_filter_list</string>
    <string name="class_filter_summary">Choose the class to show (will override Type Filter)</string>
    <string name="class_filter_title">Class Filter (Only for Today Class)</string>
    <string name="class_filter_list_key">class_filter_list</string>
    <string name="filter_key">filter</string>
    <string name="filter_summary">Select your preferable filter</string>
    <string name="filter_title">Filter Option</string>

    <!-- Setting Preference -->
    <string name="intake_code_summary">Please provide your intake code</string>
    <string name="intake_code_title">Intake Code</string>
    <string name="intake_code_key">intake_code</string>
    <string name="dark_theme_summary">Switch to Dark Theme</string>
    <string name="dark_theme_title">Dark Theme</string>
    <string name="dark_theme_key">dark_theme</string>

</resources>
